// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Molecules / Input / Phone Default 1`] = `
.c17 {
  padding-left: 8px;
  background-color: transparent;
}

.c18 {
  height: 12px;
  box-sizing: border-box;
  display: block;
  width: 16px;
  overflow: hidden;
}

.c3 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c4 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
}

.c14 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c16 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 {
  text-overflow: ellipsis;
  white-space: nowrap;
  cursor: pointer;
}

.c9 {
  position: absolute;
  height: 1px;
  width: 1px;
  overflow: hidden;
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
  text-overflow: ellipsis;
  white-space: nowrap;
  cursor: pointer;
}

.c19 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 20px;
  height: 20px;
  fill: #282823;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c12 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
}

.c12,
.c12[type='button'],
.c12[type='reset'],
.c12[type='submit'] {
  -webkit-appearance: button;
}

.c12::-moz-focus-inner,
.c12[type='button']::-moz-focus-inner,
.c12[type='reset']::-moz-focus-inner,
.c12[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c12:-moz-focusring,
.c12[type='button']:-moz-focusring,
.c12[type='reset']:-moz-focusring,
.c12[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c2 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c11 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c20 {
  -webkit-transform: translateY(-50%) rotate(0);
  -ms-transform: translateY(-50%) rotate(0);
  transform: translateY(-50%) rotate(0);
  -webkit-transform-origin: center center;
  -ms-transform-origin: center center;
  transform-origin: center center;
  -webkit-transition: -webkit-transform 0.16s ease-out;
  -webkit-transition: transform 0.16s ease-out;
  transition: transform 0.16s ease-out;
  position: absolute;
  height: 8px;
  top: 50%;
  right: 4px;
  pointer-events: none;
}

.c8 {
  position: relative;
  display: block;
  width: auto;
}

.c10 {
  height: 40px;
  border: 1px solid #BCBCB6;
  position: relative;
  background: #FFFFFF;
  box-sizing: border-box;
  position: relative;
}

.c10:hover {
  border-color: #4B4B46;
}

.c10:focus-within {
  border-color: #0046FF;
}

.c10.focus-within {
  border-color: #0046FF;
}

.c15 {
  height: 100%;
  width: 100%;
}

.c13 {
  background: transparent;
  width: 100%;
  height: 100%;
  cursor: pointer;
  padding: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border: 0;
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  outline: 0;
  text-align: initial;
}

.c13:active {
  color: inherit;
}

.c7 {
  display: none;
}

.c6 {
  max-width: 50px;
}

.c6 * {
  border: none;
}

.c21 {
  cursor: auto;
  background-color: #FFFFFF;
}

.c22 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  border: 0;
  width: 100%;
  padding: 8px;
  margin: 0;
  line-height: inherit;
  box-sizing: border-box;
  height: 40px;
  background-color: #FFFFFF;
}

.c22::-webkit-input-placeholder {
  color: #6E6E69;
  line-height: inherit;
  opacity: 1;
}

.c22::-moz-placeholder {
  color: #6E6E69;
  line-height: inherit;
  opacity: 1;
}

.c22:-ms-input-placeholder {
  color: #6E6E69;
  line-height: inherit;
  opacity: 1;
}

.c22::placeholder {
  color: #6E6E69;
  line-height: inherit;
  opacity: 1;
}

.c22:disabled::-webkit-input-placeholder {
  color: #A0A09B;
}

.c22:disabled::-moz-placeholder {
  color: #A0A09B;
}

.c22:disabled:-ms-input-placeholder {
  color: #A0A09B;
}

.c22:disabled::placeholder {
  color: #A0A09B;
}

.c5 {
  position: relative;
  padding: 0px 0;
  border: solid;
  border-color: #BCBCB6;
  border-width: 1px;
  position: relative;
}

.c5:focus {
  border-width: 1px;
}

.c5:hover {
  border-color: #4B4B46;
}

.c5:focus {
  border-color: #0046FF;
}

.c0 {
  width: 200px;
  display: inline-block;
}

<div
  className="c0"
>
  <label
    className="c1"
    hidden={false}
  >
    <span
      className="c2"
    >
      <div
        className="c3"
      >
        Phone number 
      </div>
      <div
        className="c4 c5"
      >
        <div
          className="c6"
        >
          <select
            aria-hidden="true"
            className="c7"
            disabled={false}
            onChange={[Function]}
            value="46"
          >
            
            <option
              label={
                <CountryCodeLabel
                  countryCode="se"
                  prefixCode="+46"
                />
              }
              value="46"
            />
            <option
              label={
                <CountryCodeLabel
                  countryCode="dk"
                  prefixCode="+45"
                />
              }
              value="45"
            />
            <option
              label={
                <CountryCodeLabel
                  countryCode="no"
                  prefixCode="+47"
                />
              }
              value="47"
            />
            <option
              label={
                <CountryCodeLabel
                  countryCode="fi"
                  prefixCode="+385"
                />
              }
              value="385"
            />
            <option
              label={
                <ForwardRef
                  alignItems="center"
                  container={true}
                  gutter={3}
                >
                  <ForwardRef
                    item={true}
                  >
                    <Icon.Globe
                      size={3}
                    />
                  </ForwardRef>
                  <ForwardRef
                    item={true}
                  >
                    <ForwardRef
                      type="secondary"
                    >
                      +
                    </ForwardRef>
                  </ForwardRef>
                </ForwardRef>
              }
              value=""
            />
          </select>
          <div
            className="c8"
          >
            <div
              className="c3"
            >
              <div
                className="c0"
              >
                <label
                  className="c9"
                  hidden={true}
                  htmlFor="phone-input-country-code-selector"
                >
                  <span
                    className="c2"
                  >
                    country code 
                  </span>
                </label>
                <div
                  className="c10"
                  disabled={false}
                  label="country code"
                  onBlur={[Function]}
                  onFocus={[Function]}
                  tabIndex={0}
                >
                  <span
                    className="c11"
                  >
                    <button
                      aria-expanded="false"
                      aria-haspopup="listbox"
                      aria-label="country code: [object Object]"
                      className="c12 c13"
                      data-testid="input-select-button"
                      disabled={false}
                      form=""
                      id="phone-input-country-code-selector"
                      onClick={[Function]}
                      tabIndex={0}
                      type="button"
                    >
                      <div
                        aria-hidden="true"
                        className="c14 c15"
                      >
                        <div
                          className="c16"
                        >
                          <div
                            className="c17"
                          >
                            <svg
                              className="c18"
                              focusable="false"
                              role="img"
                              viewBox="0 0 640 480"
                            >
                              <g
                                transform="translate(50.082) scale(.9375)"
                              >
                                <g
                                  fillRule="evenodd"
                                  strokeWidth="1pt"
                                >
                                  <path
                                    d="M-121.103.302h256V205.1h-256zM-121.103 307.178h256v204.8h-256z"
                                    fill="#006aa7"
                                  />
                                  <path
                                    d="M-121.103 204.984h256v102.4h-256z"
                                    fill="#fecc00"
                                  />
                                  <path
                                    d="M133.843.01h102.4v511.997h-102.4z"
                                    fill="#fecc00"
                                  />
                                  <path
                                    d="M232.995 205.013h460.798v102.4H232.995z"
                                    fill="#fecc00"
                                  />
                                  <path
                                    d="M236.155 307.208h460.797v204.799H236.155zM236.155.302h460.797V205.1H236.155z"
                                    fill="#006aa7"
                                  />
                                </g>
                              </g>
                              <title>
                                Sweden
                              </title>
                            </svg>
                          </div>
                        </div>
                      </div>
                    </button>
                  </span>
                  <svg
                    aria-hidden="true"
                    className="c19 c20"
                    focusable="false"
                    open={false}
                    preserveAspectRatio="xMidYMid meet"
                    role="presentation"
                    viewBox="0 0 24 24"
                  >
                    <polygon
                      points="19.969 4 24 8.027 12 20 0 8.027 4.031 4 12 11.952"
                    />
                  </svg>
                </div>
                
              </div>
            </div>
          </div>
        </div>
        <div
          className="c3 c21"
        >
          <span
            className="c11"
          >
            +
            46
          </span>
        </div>
        <input
          className="NormalizedInput__Input-sc-1m4kmh9-0 c22"
          name="default-example"
          onChange={[Function]}
          placeholder="123 456 789"
          type="text"
          variant="normal"
        />
      </div>
    </span>
  </label>
</div>
`;

exports[`Storyshots Molecules / Input / Phone Full width 1`] = `
.c18 {
  padding-left: 8px;
  background-color: transparent;
}

.c19 {
  height: 12px;
  box-sizing: border-box;
  display: block;
  width: 16px;
  overflow: hidden;
}

.c3 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c4 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
}

.c15 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c17 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 {
  text-overflow: ellipsis;
  white-space: nowrap;
  cursor: pointer;
}

.c10 {
  position: absolute;
  height: 1px;
  width: 1px;
  overflow: hidden;
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
  text-overflow: ellipsis;
  white-space: nowrap;
  cursor: pointer;
}

.c20 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 20px;
  height: 20px;
  fill: #282823;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c13 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
}

.c13,
.c13[type='button'],
.c13[type='reset'],
.c13[type='submit'] {
  -webkit-appearance: button;
}

.c13::-moz-focus-inner,
.c13[type='button']::-moz-focus-inner,
.c13[type='reset']::-moz-focus-inner,
.c13[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c13:-moz-focusring,
.c13[type='button']:-moz-focusring,
.c13[type='reset']:-moz-focusring,
.c13[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c2 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c12 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c21 {
  -webkit-transform: translateY(-50%) rotate(0);
  -ms-transform: translateY(-50%) rotate(0);
  transform: translateY(-50%) rotate(0);
  -webkit-transform-origin: center center;
  -ms-transform-origin: center center;
  transform-origin: center center;
  -webkit-transition: -webkit-transform 0.16s ease-out;
  -webkit-transition: transform 0.16s ease-out;
  transition: transform 0.16s ease-out;
  position: absolute;
  height: 8px;
  top: 50%;
  right: 4px;
  pointer-events: none;
}

.c8 {
  position: relative;
  display: block;
  width: auto;
}

.c11 {
  height: 40px;
  border: 1px solid #BCBCB6;
  position: relative;
  background: #FFFFFF;
  box-sizing: border-box;
  position: relative;
}

.c11:hover {
  border-color: #4B4B46;
}

.c11:focus-within {
  border-color: #0046FF;
}

.c11.focus-within {
  border-color: #0046FF;
}

.c16 {
  height: 100%;
  width: 100%;
}

.c14 {
  background: transparent;
  width: 100%;
  height: 100%;
  cursor: pointer;
  padding: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border: 0;
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  outline: 0;
  text-align: initial;
}

.c14:active {
  color: inherit;
}

.c7 {
  display: none;
}

.c6 {
  max-width: 50px;
}

.c6 * {
  border: none;
}

.c22 {
  cursor: auto;
  background-color: #FFFFFF;
}

.c23 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  border: 0;
  width: 100%;
  padding: 8px;
  margin: 0;
  line-height: inherit;
  box-sizing: border-box;
  height: 40px;
  background-color: #FFFFFF;
}

.c23::-webkit-input-placeholder {
  color: #6E6E69;
  line-height: inherit;
  opacity: 1;
}

.c23::-moz-placeholder {
  color: #6E6E69;
  line-height: inherit;
  opacity: 1;
}

.c23:-ms-input-placeholder {
  color: #6E6E69;
  line-height: inherit;
  opacity: 1;
}

.c23::placeholder {
  color: #6E6E69;
  line-height: inherit;
  opacity: 1;
}

.c23:disabled::-webkit-input-placeholder {
  color: #A0A09B;
}

.c23:disabled::-moz-placeholder {
  color: #A0A09B;
}

.c23:disabled:-ms-input-placeholder {
  color: #A0A09B;
}

.c23:disabled::placeholder {
  color: #A0A09B;
}

.c5 {
  position: relative;
  padding: 0px 0;
  border: solid;
  border-color: #BCBCB6;
  border-width: 1px;
  position: relative;
}

.c5:focus {
  border-width: 1px;
}

.c5:hover {
  border-color: #4B4B46;
}

.c5:focus {
  border-color: #0046FF;
}

.c0 {
  width: 100%;
  display: inline-block;
}

.c9 {
  width: 200px;
  display: inline-block;
}

<div
  className="c0"
>
  <label
    className="c1"
    hidden={false}
  >
    <span
      className="c2"
    >
      <div
        className="c3"
      >
        Phone number 
      </div>
      <div
        className="c4 c5"
      >
        <div
          className="c6"
        >
          <select
            aria-hidden="true"
            className="c7"
            disabled={false}
            onChange={[Function]}
            value="46"
          >
            
            <option
              label={
                <CountryCodeLabel
                  countryCode="se"
                  prefixCode="+46"
                />
              }
              value="46"
            />
            <option
              label={
                <CountryCodeLabel
                  countryCode="dk"
                  prefixCode="+45"
                />
              }
              value="45"
            />
            <option
              label={
                <CountryCodeLabel
                  countryCode="no"
                  prefixCode="+47"
                />
              }
              value="47"
            />
            <option
              label={
                <CountryCodeLabel
                  countryCode="fi"
                  prefixCode="+385"
                />
              }
              value="385"
            />
            <option
              label={
                <ForwardRef
                  alignItems="center"
                  container={true}
                  gutter={3}
                >
                  <ForwardRef
                    item={true}
                  >
                    <Icon.Globe
                      size={3}
                    />
                  </ForwardRef>
                  <ForwardRef
                    item={true}
                  >
                    <ForwardRef
                      type="secondary"
                    >
                      +
                    </ForwardRef>
                  </ForwardRef>
                </ForwardRef>
              }
              value=""
            />
          </select>
          <div
            className="c8"
          >
            <div
              className="c3"
            >
              <div
                className="c9"
              >
                <label
                  className="c10"
                  hidden={true}
                  htmlFor="phone-input-country-code-selector"
                >
                  <span
                    className="c2"
                  >
                    country code 
                  </span>
                </label>
                <div
                  className="c11"
                  disabled={false}
                  label="country code"
                  onBlur={[Function]}
                  onFocus={[Function]}
                  tabIndex={0}
                >
                  <span
                    className="c12"
                  >
                    <button
                      aria-expanded="false"
                      aria-haspopup="listbox"
                      aria-label="country code: [object Object]"
                      className="c13 c14"
                      data-testid="input-select-button"
                      disabled={false}
                      form=""
                      id="phone-input-country-code-selector"
                      onClick={[Function]}
                      tabIndex={0}
                      type="button"
                    >
                      <div
                        aria-hidden="true"
                        className="c15 c16"
                      >
                        <div
                          className="c17"
                        >
                          <div
                            className="c18"
                          >
                            <svg
                              className="c19"
                              focusable="false"
                              role="img"
                              viewBox="0 0 640 480"
                            >
                              <g
                                transform="translate(50.082) scale(.9375)"
                              >
                                <g
                                  fillRule="evenodd"
                                  strokeWidth="1pt"
                                >
                                  <path
                                    d="M-121.103.302h256V205.1h-256zM-121.103 307.178h256v204.8h-256z"
                                    fill="#006aa7"
                                  />
                                  <path
                                    d="M-121.103 204.984h256v102.4h-256z"
                                    fill="#fecc00"
                                  />
                                  <path
                                    d="M133.843.01h102.4v511.997h-102.4z"
                                    fill="#fecc00"
                                  />
                                  <path
                                    d="M232.995 205.013h460.798v102.4H232.995z"
                                    fill="#fecc00"
                                  />
                                  <path
                                    d="M236.155 307.208h460.797v204.799H236.155zM236.155.302h460.797V205.1H236.155z"
                                    fill="#006aa7"
                                  />
                                </g>
                              </g>
                              <title>
                                Sweden
                              </title>
                            </svg>
                          </div>
                        </div>
                      </div>
                    </button>
                  </span>
                  <svg
                    aria-hidden="true"
                    className="c20 c21"
                    focusable="false"
                    open={false}
                    preserveAspectRatio="xMidYMid meet"
                    role="presentation"
                    viewBox="0 0 24 24"
                  >
                    <polygon
                      points="19.969 4 24 8.027 12 20 0 8.027 4.031 4 12 11.952"
                    />
                  </svg>
                </div>
                
              </div>
            </div>
          </div>
        </div>
        <div
          className="c3 c22"
        >
          <span
            className="c12"
          >
            +
            46
          </span>
        </div>
        <input
          className="NormalizedInput__Input-sc-1m4kmh9-0 c23"
          name="full-width-example"
          onChange={[Function]}
          placeholder="123 456 789"
          type="text"
          variant="normal"
        />
      </div>
    </span>
  </label>
</div>
`;

exports[`Storyshots Molecules / Input / Phone Has an error 1`] = `
.c17 {
  padding-left: 8px;
  background-color: transparent;
}

.c18 {
  height: 12px;
  box-sizing: border-box;
  display: block;
  width: 16px;
  overflow: hidden;
}

.c3 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c4 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
}

.c14 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c16 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c24 {
  position: absolute;
  height: 1px;
  width: 1px;
  overflow: hidden;
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
}

.c1 {
  text-overflow: ellipsis;
  white-space: nowrap;
  cursor: pointer;
}

.c9 {
  position: absolute;
  height: 1px;
  width: 1px;
  overflow: hidden;
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
  text-overflow: ellipsis;
  white-space: nowrap;
  cursor: pointer;
}

.c19 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 20px;
  height: 20px;
  fill: #282823;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c12 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
}

.c12,
.c12[type='button'],
.c12[type='reset'],
.c12[type='submit'] {
  -webkit-appearance: button;
}

.c12::-moz-focus-inner,
.c12[type='button']::-moz-focus-inner,
.c12[type='reset']::-moz-focus-inner,
.c12[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c12:-moz-focusring,
.c12[type='button']:-moz-focusring,
.c12[type='reset']:-moz-focusring,
.c12[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c2 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c11 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c23 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #FF1900;
  margin: 0;
  font-weight: 400;
  font-size: 12px;
  line-height: 1.3333333333333333;
}

.c20 {
  -webkit-transform: translateY(-50%) rotate(0);
  -ms-transform: translateY(-50%) rotate(0);
  transform: translateY(-50%) rotate(0);
  -webkit-transform-origin: center center;
  -ms-transform-origin: center center;
  transform-origin: center center;
  -webkit-transition: -webkit-transform 0.16s ease-out;
  -webkit-transition: transform 0.16s ease-out;
  transition: transform 0.16s ease-out;
  position: absolute;
  height: 8px;
  top: 50%;
  right: 4px;
  pointer-events: none;
}

.c8 {
  position: relative;
  display: block;
  width: auto;
}

.c10 {
  height: 40px;
  border: 1px solid #BCBCB6;
  position: relative;
  background: #FFFFFF;
  box-sizing: border-box;
  position: relative;
}

.c10:hover {
  border-color: #4B4B46;
}

.c10:focus-within {
  border-color: #0046FF;
}

.c10.focus-within {
  border-color: #0046FF;
}

.c15 {
  height: 100%;
  width: 100%;
}

.c13 {
  background: transparent;
  width: 100%;
  height: 100%;
  cursor: pointer;
  padding: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border: 0;
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  outline: 0;
  text-align: initial;
}

.c13:active {
  color: inherit;
}

.c7 {
  display: none;
}

.c6 {
  max-width: 50px;
}

.c6 * {
  border: none;
}

.c21 {
  cursor: auto;
  background-color: #FFFFFF;
}

.c22 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  border: 0;
  width: 100%;
  padding: 8px;
  margin: 0;
  line-height: inherit;
  box-sizing: border-box;
  height: 40px;
  background-color: #FFFFFF;
}

.c22::-webkit-input-placeholder {
  color: #6E6E69;
  line-height: inherit;
  opacity: 1;
}

.c22::-moz-placeholder {
  color: #6E6E69;
  line-height: inherit;
  opacity: 1;
}

.c22:-ms-input-placeholder {
  color: #6E6E69;
  line-height: inherit;
  opacity: 1;
}

.c22::placeholder {
  color: #6E6E69;
  line-height: inherit;
  opacity: 1;
}

.c22:disabled::-webkit-input-placeholder {
  color: #A0A09B;
}

.c22:disabled::-moz-placeholder {
  color: #A0A09B;
}

.c22:disabled:-ms-input-placeholder {
  color: #A0A09B;
}

.c22:disabled::placeholder {
  color: #A0A09B;
}

.c5 {
  position: relative;
  padding: 0px 0;
  border: solid;
  border-color: #FF1900;
  border-width: 1px;
  position: relative;
}

.c5:focus {
  border-width: 1px;
}

.c5:hover {
  border-color: #4B4B46;
}

.c5:focus {
  border-color: #0046FF;
}

.c0 {
  width: 200px;
  display: inline-block;
}

<div
  className="c0"
>
  <label
    className="c1"
    hidden={false}
  >
    <span
      className="c2"
    >
      <div
        className="c3"
      >
        Phone number 
      </div>
      <div
        className="c4 c5"
        error="Incorrect phone number"
      >
        <div
          className="c6"
        >
          <select
            aria-hidden="true"
            className="c7"
            disabled={false}
            onChange={[Function]}
            value="46"
          >
            
            <option
              label={
                <CountryCodeLabel
                  countryCode="se"
                  prefixCode="+46"
                />
              }
              value="46"
            />
            <option
              label={
                <CountryCodeLabel
                  countryCode="dk"
                  prefixCode="+45"
                />
              }
              value="45"
            />
            <option
              label={
                <CountryCodeLabel
                  countryCode="no"
                  prefixCode="+47"
                />
              }
              value="47"
            />
            <option
              label={
                <CountryCodeLabel
                  countryCode="fi"
                  prefixCode="+385"
                />
              }
              value="385"
            />
            <option
              label={
                <ForwardRef
                  alignItems="center"
                  container={true}
                  gutter={3}
                >
                  <ForwardRef
                    item={true}
                  >
                    <Icon.Globe
                      size={3}
                    />
                  </ForwardRef>
                  <ForwardRef
                    item={true}
                  >
                    <ForwardRef
                      type="secondary"
                    >
                      +
                    </ForwardRef>
                  </ForwardRef>
                </ForwardRef>
              }
              value=""
            />
          </select>
          <div
            className="c8"
          >
            <div
              className="c3"
            >
              <div
                className="c0"
              >
                <label
                  className="c9"
                  hidden={true}
                  htmlFor="phone-input-country-code-selector"
                >
                  <span
                    className="c2"
                  >
                    country code 
                  </span>
                </label>
                <div
                  className="c10"
                  disabled={false}
                  label="country code"
                  onBlur={[Function]}
                  onFocus={[Function]}
                  tabIndex={0}
                >
                  <span
                    className="c11"
                  >
                    <button
                      aria-expanded="false"
                      aria-haspopup="listbox"
                      aria-label="country code: [object Object]"
                      className="c12 c13"
                      data-testid="input-select-button"
                      disabled={false}
                      form=""
                      id="phone-input-country-code-selector"
                      onClick={[Function]}
                      tabIndex={0}
                      type="button"
                    >
                      <div
                        aria-hidden="true"
                        className="c14 c15"
                      >
                        <div
                          className="c16"
                        >
                          <div
                            className="c17"
                          >
                            <svg
                              className="c18"
                              focusable="false"
                              role="img"
                              viewBox="0 0 640 480"
                            >
                              <g
                                transform="translate(50.082) scale(.9375)"
                              >
                                <g
                                  fillRule="evenodd"
                                  strokeWidth="1pt"
                                >
                                  <path
                                    d="M-121.103.302h256V205.1h-256zM-121.103 307.178h256v204.8h-256z"
                                    fill="#006aa7"
                                  />
                                  <path
                                    d="M-121.103 204.984h256v102.4h-256z"
                                    fill="#fecc00"
                                  />
                                  <path
                                    d="M133.843.01h102.4v511.997h-102.4z"
                                    fill="#fecc00"
                                  />
                                  <path
                                    d="M232.995 205.013h460.798v102.4H232.995z"
                                    fill="#fecc00"
                                  />
                                  <path
                                    d="M236.155 307.208h460.797v204.799H236.155zM236.155.302h460.797V205.1H236.155z"
                                    fill="#006aa7"
                                  />
                                </g>
                              </g>
                              <title>
                                Sweden
                              </title>
                            </svg>
                          </div>
                        </div>
                      </div>
                    </button>
                  </span>
                  <svg
                    aria-hidden="true"
                    className="c19 c20"
                    focusable="false"
                    open={false}
                    preserveAspectRatio="xMidYMid meet"
                    role="presentation"
                    viewBox="0 0 24 24"
                  >
                    <polygon
                      points="19.969 4 24 8.027 12 20 0 8.027 4.031 4 12 11.952"
                    />
                  </svg>
                </div>
                
              </div>
            </div>
          </div>
        </div>
        <div
          className="c3 c21"
        >
          <span
            className="c11"
          >
            +
            46
          </span>
        </div>
        <input
          aria-invalid={true}
          className="NormalizedInput__Input-sc-1m4kmh9-0 c22"
          name="has-error-example"
          onChange={[Function]}
          placeholder="123 456 789"
          type="text"
          variant="normal"
        />
      </div>
    </span>
  </label>
  <div>
    <span
      className="c23"
    >
      <div
        className="c24"
      >
        Error: 
      </div>
      Incorrect phone number
    </span>
  </div>
</div>
`;

exports[`Storyshots Molecules / Input / Phone Has success 1`] = `
.c17 {
  padding-left: 8px;
  background-color: transparent;
}

.c18 {
  height: 12px;
  box-sizing: border-box;
  display: block;
  width: 16px;
  overflow: hidden;
}

.c3 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c4 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
}

.c14 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c16 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 {
  text-overflow: ellipsis;
  white-space: nowrap;
  cursor: pointer;
}

.c9 {
  position: absolute;
  height: 1px;
  width: 1px;
  overflow: hidden;
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
  text-overflow: ellipsis;
  white-space: nowrap;
  cursor: pointer;
}

.c19 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 20px;
  height: 20px;
  fill: #282823;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c12 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
}

.c12,
.c12[type='button'],
.c12[type='reset'],
.c12[type='submit'] {
  -webkit-appearance: button;
}

.c12::-moz-focus-inner,
.c12[type='button']::-moz-focus-inner,
.c12[type='reset']::-moz-focus-inner,
.c12[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c12:-moz-focusring,
.c12[type='button']:-moz-focusring,
.c12[type='reset']:-moz-focusring,
.c12[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c2 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c11 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c20 {
  -webkit-transform: translateY(-50%) rotate(0);
  -ms-transform: translateY(-50%) rotate(0);
  transform: translateY(-50%) rotate(0);
  -webkit-transform-origin: center center;
  -ms-transform-origin: center center;
  transform-origin: center center;
  -webkit-transition: -webkit-transform 0.16s ease-out;
  -webkit-transition: transform 0.16s ease-out;
  transition: transform 0.16s ease-out;
  position: absolute;
  height: 8px;
  top: 50%;
  right: 4px;
  pointer-events: none;
}

.c8 {
  position: relative;
  display: block;
  width: auto;
}

.c10 {
  height: 40px;
  border: 1px solid #BCBCB6;
  position: relative;
  background: #FFFFFF;
  box-sizing: border-box;
  position: relative;
}

.c10:hover {
  border-color: #4B4B46;
}

.c10:focus-within {
  border-color: #0046FF;
}

.c10.focus-within {
  border-color: #0046FF;
}

.c15 {
  height: 100%;
  width: 100%;
}

.c13 {
  background: transparent;
  width: 100%;
  height: 100%;
  cursor: pointer;
  padding: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border: 0;
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  outline: 0;
  text-align: initial;
}

.c13:active {
  color: inherit;
}

.c7 {
  display: none;
}

.c6 {
  max-width: 50px;
}

.c6 * {
  border: none;
}

.c21 {
  cursor: auto;
  background-color: #FFFFFF;
}

.c22 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  border: 0;
  width: 100%;
  padding: 8px;
  margin: 0;
  line-height: inherit;
  box-sizing: border-box;
  height: 40px;
  background-color: #FFFFFF;
}

.c22::-webkit-input-placeholder {
  color: #6E6E69;
  line-height: inherit;
  opacity: 1;
}

.c22::-moz-placeholder {
  color: #6E6E69;
  line-height: inherit;
  opacity: 1;
}

.c22:-ms-input-placeholder {
  color: #6E6E69;
  line-height: inherit;
  opacity: 1;
}

.c22::placeholder {
  color: #6E6E69;
  line-height: inherit;
  opacity: 1;
}

.c22:disabled::-webkit-input-placeholder {
  color: #A0A09B;
}

.c22:disabled::-moz-placeholder {
  color: #A0A09B;
}

.c22:disabled:-ms-input-placeholder {
  color: #A0A09B;
}

.c22:disabled::placeholder {
  color: #A0A09B;
}

.c5 {
  position: relative;
  padding: 0px 0;
  border: solid;
  border-color: #00D200;
  border-width: 1px;
  position: relative;
}

.c5:focus {
  border-width: 1px;
}

.c5:hover {
  border-color: #4B4B46;
}

.c5:focus {
  border-color: #0046FF;
}

.c0 {
  width: 200px;
  display: inline-block;
}

<div
  className="c0"
>
  <label
    className="c1"
    hidden={false}
  >
    <span
      className="c2"
    >
      <div
        className="c3"
      >
        Phone number 
      </div>
      <div
        className="c4 c5"
        success={true}
      >
        <div
          className="c6"
        >
          <select
            aria-hidden="true"
            className="c7"
            disabled={false}
            onChange={[Function]}
            value="46"
          >
            
            <option
              label={
                <CountryCodeLabel
                  countryCode="se"
                  prefixCode="+46"
                />
              }
              value="46"
            />
            <option
              label={
                <CountryCodeLabel
                  countryCode="dk"
                  prefixCode="+45"
                />
              }
              value="45"
            />
            <option
              label={
                <CountryCodeLabel
                  countryCode="no"
                  prefixCode="+47"
                />
              }
              value="47"
            />
            <option
              label={
                <CountryCodeLabel
                  countryCode="fi"
                  prefixCode="+385"
                />
              }
              value="385"
            />
            <option
              label={
                <ForwardRef
                  alignItems="center"
                  container={true}
                  gutter={3}
                >
                  <ForwardRef
                    item={true}
                  >
                    <Icon.Globe
                      size={3}
                    />
                  </ForwardRef>
                  <ForwardRef
                    item={true}
                  >
                    <ForwardRef
                      type="secondary"
                    >
                      +
                    </ForwardRef>
                  </ForwardRef>
                </ForwardRef>
              }
              value=""
            />
          </select>
          <div
            className="c8"
          >
            <div
              className="c3"
            >
              <div
                className="c0"
              >
                <label
                  className="c9"
                  hidden={true}
                  htmlFor="phone-input-country-code-selector"
                >
                  <span
                    className="c2"
                  >
                    country code 
                  </span>
                </label>
                <div
                  className="c10"
                  disabled={false}
                  label="country code"
                  onBlur={[Function]}
                  onFocus={[Function]}
                  tabIndex={0}
                >
                  <span
                    className="c11"
                  >
                    <button
                      aria-expanded="false"
                      aria-haspopup="listbox"
                      aria-label="country code: [object Object]"
                      className="c12 c13"
                      data-testid="input-select-button"
                      disabled={false}
                      form=""
                      id="phone-input-country-code-selector"
                      onClick={[Function]}
                      tabIndex={0}
                      type="button"
                    >
                      <div
                        aria-hidden="true"
                        className="c14 c15"
                      >
                        <div
                          className="c16"
                        >
                          <div
                            className="c17"
                          >
                            <svg
                              className="c18"
                              focusable="false"
                              role="img"
                              viewBox="0 0 640 480"
                            >
                              <g
                                transform="translate(50.082) scale(.9375)"
                              >
                                <g
                                  fillRule="evenodd"
                                  strokeWidth="1pt"
                                >
                                  <path
                                    d="M-121.103.302h256V205.1h-256zM-121.103 307.178h256v204.8h-256z"
                                    fill="#006aa7"
                                  />
                                  <path
                                    d="M-121.103 204.984h256v102.4h-256z"
                                    fill="#fecc00"
                                  />
                                  <path
                                    d="M133.843.01h102.4v511.997h-102.4z"
                                    fill="#fecc00"
                                  />
                                  <path
                                    d="M232.995 205.013h460.798v102.4H232.995z"
                                    fill="#fecc00"
                                  />
                                  <path
                                    d="M236.155 307.208h460.797v204.799H236.155zM236.155.302h460.797V205.1H236.155z"
                                    fill="#006aa7"
                                  />
                                </g>
                              </g>
                              <title>
                                Sweden
                              </title>
                            </svg>
                          </div>
                        </div>
                      </div>
                    </button>
                  </span>
                  <svg
                    aria-hidden="true"
                    className="c19 c20"
                    focusable="false"
                    open={false}
                    preserveAspectRatio="xMidYMid meet"
                    role="presentation"
                    viewBox="0 0 24 24"
                  >
                    <polygon
                      points="19.969 4 24 8.027 12 20 0 8.027 4.031 4 12 11.952"
                    />
                  </svg>
                </div>
                
              </div>
            </div>
          </div>
        </div>
        <div
          className="c3 c21"
        >
          <span
            className="c11"
          >
            +
            46
          </span>
        </div>
        <input
          className="NormalizedInput__Input-sc-1m4kmh9-0 c22"
          name="has-success-example"
          onChange={[Function]}
          placeholder="123 456 789"
          type="text"
          variant="normal"
        />
      </div>
    </span>
  </label>
</div>
`;

exports[`Storyshots Molecules / Input / Phone Is disabled 1`] = `
.c18 {
  padding-left: 8px;
  background-color: transparent;
}

.c19 {
  height: 12px;
  box-sizing: border-box;
  display: block;
  width: 16px;
  overflow: hidden;
}

.c3 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c4 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
}

.c15 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c17 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 {
  text-overflow: ellipsis;
  white-space: nowrap;
  cursor: not-allowed;
}

.c9 {
  position: absolute;
  height: 1px;
  width: 1px;
  overflow: hidden;
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
  text-overflow: ellipsis;
  white-space: nowrap;
  cursor: pointer;
}

.c20 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 20px;
  height: 20px;
  fill: #282823;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c13 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
}

.c13,
.c13[type='button'],
.c13[type='reset'],
.c13[type='submit'] {
  -webkit-appearance: button;
}

.c13::-moz-focus-inner,
.c13[type='button']::-moz-focus-inner,
.c13[type='reset']::-moz-focus-inner,
.c13[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c13:-moz-focusring,
.c13[type='button']:-moz-focusring,
.c13[type='reset']:-moz-focusring,
.c13[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c2 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #A0A09B;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c10 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c12 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c21 {
  -webkit-transform: translateY(-50%) rotate(0);
  -ms-transform: translateY(-50%) rotate(0);
  transform: translateY(-50%) rotate(0);
  -webkit-transform-origin: center center;
  -ms-transform-origin: center center;
  transform-origin: center center;
  -webkit-transition: -webkit-transform 0.16s ease-out;
  -webkit-transition: transform 0.16s ease-out;
  transition: transform 0.16s ease-out;
  position: absolute;
  height: 8px;
  top: 50%;
  right: 4px;
  pointer-events: none;
}

.c8 {
  position: relative;
  display: block;
  width: auto;
}

.c11 {
  height: 40px;
  border: 1px solid #BCBCB6;
  position: relative;
  background: #FFFFFF;
  box-sizing: border-box;
  position: relative;
}

.c11:focus-within {
  border-color: #0046FF;
}

.c11.focus-within {
  border-color: #0046FF;
}

.c16 {
  height: 100%;
  width: 100%;
}

.c14 {
  background: #EBEBE8;
  width: 100%;
  height: 100%;
  cursor: not-allowed;
  padding: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border: 0;
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  outline: 0;
  text-align: initial;
}

.c14:active {
  color: inherit;
}

.c7 {
  display: none;
}

.c6 {
  max-width: 50px;
}

.c6 * {
  border: none;
}

.c22 {
  cursor: not-allowed;
  background-color: #EBEBE8;
}

.c23 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  border: 0;
  width: 100%;
  padding: 8px;
  margin: 0;
  line-height: inherit;
  box-sizing: border-box;
  height: 40px;
  background-color: #EBEBE8;
  cursor: not-allowed;
}

.c23::-webkit-input-placeholder {
  color: #6E6E69;
  line-height: inherit;
  opacity: 1;
}

.c23::-moz-placeholder {
  color: #6E6E69;
  line-height: inherit;
  opacity: 1;
}

.c23:-ms-input-placeholder {
  color: #6E6E69;
  line-height: inherit;
  opacity: 1;
}

.c23::placeholder {
  color: #6E6E69;
  line-height: inherit;
  opacity: 1;
}

.c23:disabled::-webkit-input-placeholder {
  color: #A0A09B;
}

.c23:disabled::-moz-placeholder {
  color: #A0A09B;
}

.c23:disabled:-ms-input-placeholder {
  color: #A0A09B;
}

.c23:disabled::placeholder {
  color: #A0A09B;
}

.c5 {
  position: relative;
  padding: 0px 0;
  border: solid;
  border-color: #BCBCB6;
  border-width: 1px;
  position: relative;
}

.c5:focus {
  border-width: 1px;
}

.c5:focus {
  border-color: #0046FF;
}

.c0 {
  width: 200px;
  display: inline-block;
}

<div
  className="c0"
>
  <label
    className="c1"
    hidden={false}
  >
    <span
      className="c2"
    >
      <div
        className="c3"
      >
        Phone number 
      </div>
      <div
        className="c4 c5"
        disabled={true}
      >
        <div
          className="c6"
        >
          <select
            aria-hidden="true"
            className="c7"
            disabled={true}
            onChange={[Function]}
            value="46"
          >
            
            <option
              label={
                <CountryCodeLabel
                  countryCode="se"
                  prefixCode="+46"
                />
              }
              value="46"
            />
            <option
              label={
                <CountryCodeLabel
                  countryCode="dk"
                  prefixCode="+45"
                />
              }
              value="45"
            />
            <option
              label={
                <CountryCodeLabel
                  countryCode="no"
                  prefixCode="+47"
                />
              }
              value="47"
            />
            <option
              label={
                <CountryCodeLabel
                  countryCode="fi"
                  prefixCode="+385"
                />
              }
              value="385"
            />
            <option
              label={
                <ForwardRef
                  alignItems="center"
                  container={true}
                  gutter={3}
                >
                  <ForwardRef
                    item={true}
                  >
                    <Icon.Globe
                      size={3}
                    />
                  </ForwardRef>
                  <ForwardRef
                    item={true}
                  >
                    <ForwardRef
                      type="secondary"
                    >
                      +
                    </ForwardRef>
                  </ForwardRef>
                </ForwardRef>
              }
              value=""
            />
          </select>
          <div
            className="c8"
          >
            <div
              className="c3"
            >
              <div
                className="c0"
              >
                <label
                  className="c9"
                  hidden={true}
                  htmlFor="phone-input-country-code-selector"
                >
                  <span
                    className="c10"
                  >
                    country code 
                  </span>
                </label>
                <div
                  className="c11"
                  disabled={true}
                  label="country code"
                  onBlur={[Function]}
                  onFocus={[Function]}
                  tabIndex={0}
                >
                  <span
                    className="c12"
                  >
                    <button
                      aria-expanded="false"
                      aria-haspopup="listbox"
                      aria-label="country code: [object Object]"
                      className="c13 c14"
                      data-testid="input-select-button"
                      disabled={true}
                      form=""
                      id="phone-input-country-code-selector"
                      onClick={[Function]}
                      tabIndex={0}
                      type="button"
                    >
                      <div
                        aria-hidden="true"
                        className="c15 c16"
                      >
                        <div
                          className="c17"
                        >
                          <div
                            className="c18"
                          >
                            <svg
                              className="c19"
                              focusable="false"
                              role="img"
                              viewBox="0 0 640 480"
                            >
                              <g
                                transform="translate(50.082) scale(.9375)"
                              >
                                <g
                                  fillRule="evenodd"
                                  strokeWidth="1pt"
                                >
                                  <path
                                    d="M-121.103.302h256V205.1h-256zM-121.103 307.178h256v204.8h-256z"
                                    fill="#006aa7"
                                  />
                                  <path
                                    d="M-121.103 204.984h256v102.4h-256z"
                                    fill="#fecc00"
                                  />
                                  <path
                                    d="M133.843.01h102.4v511.997h-102.4z"
                                    fill="#fecc00"
                                  />
                                  <path
                                    d="M232.995 205.013h460.798v102.4H232.995z"
                                    fill="#fecc00"
                                  />
                                  <path
                                    d="M236.155 307.208h460.797v204.799H236.155zM236.155.302h460.797V205.1H236.155z"
                                    fill="#006aa7"
                                  />
                                </g>
                              </g>
                              <title>
                                Sweden
                              </title>
                            </svg>
                          </div>
                        </div>
                      </div>
                    </button>
                  </span>
                  <svg
                    aria-hidden="true"
                    className="c20 c21"
                    focusable="false"
                    open={false}
                    preserveAspectRatio="xMidYMid meet"
                    role="presentation"
                    viewBox="0 0 24 24"
                  >
                    <polygon
                      points="19.969 4 24 8.027 12 20 0 8.027 4.031 4 12 11.952"
                    />
                  </svg>
                </div>
                
              </div>
            </div>
          </div>
        </div>
        <div
          className="c3 c22"
          disabled={true}
        >
          <span
            className="c10"
          >
            +
            46
          </span>
        </div>
        <input
          className="NormalizedInput__Input-sc-1m4kmh9-0 c23"
          disabled={true}
          name="disabled-example"
          onChange={[Function]}
          type="text"
          value="123 456 789"
          variant="normal"
        />
      </div>
    </span>
  </label>
</div>
`;

exports[`Storyshots Molecules / Input / Phone With help text 1`] = `
.c17 {
  padding-left: 8px;
  background-color: transparent;
}

.c18 {
  height: 12px;
  box-sizing: border-box;
  display: block;
  width: 16px;
  overflow: hidden;
}

.c3 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c4 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
}

.c14 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c16 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 {
  text-overflow: ellipsis;
  white-space: nowrap;
  cursor: pointer;
}

.c9 {
  position: absolute;
  height: 1px;
  width: 1px;
  overflow: hidden;
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
  text-overflow: ellipsis;
  white-space: nowrap;
  cursor: pointer;
}

.c19 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 20px;
  height: 20px;
  fill: #282823;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c12 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
}

.c12,
.c12[type='button'],
.c12[type='reset'],
.c12[type='submit'] {
  -webkit-appearance: button;
}

.c12::-moz-focus-inner,
.c12[type='button']::-moz-focus-inner,
.c12[type='reset']::-moz-focus-inner,
.c12[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c12:-moz-focusring,
.c12[type='button']:-moz-focusring,
.c12[type='reset']:-moz-focusring,
.c12[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c2 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c11 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c23 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 12px;
  line-height: 1.3333333333333333;
}

.c20 {
  -webkit-transform: translateY(-50%) rotate(0);
  -ms-transform: translateY(-50%) rotate(0);
  transform: translateY(-50%) rotate(0);
  -webkit-transform-origin: center center;
  -ms-transform-origin: center center;
  transform-origin: center center;
  -webkit-transition: -webkit-transform 0.16s ease-out;
  -webkit-transition: transform 0.16s ease-out;
  transition: transform 0.16s ease-out;
  position: absolute;
  height: 8px;
  top: 50%;
  right: 4px;
  pointer-events: none;
}

.c8 {
  position: relative;
  display: block;
  width: auto;
}

.c10 {
  height: 40px;
  border: 1px solid #BCBCB6;
  position: relative;
  background: #FFFFFF;
  box-sizing: border-box;
  position: relative;
}

.c10:hover {
  border-color: #4B4B46;
}

.c10:focus-within {
  border-color: #0046FF;
}

.c10.focus-within {
  border-color: #0046FF;
}

.c15 {
  height: 100%;
  width: 100%;
}

.c13 {
  background: transparent;
  width: 100%;
  height: 100%;
  cursor: pointer;
  padding: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border: 0;
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  outline: 0;
  text-align: initial;
}

.c13:active {
  color: inherit;
}

.c7 {
  display: none;
}

.c6 {
  max-width: 50px;
}

.c6 * {
  border: none;
}

.c21 {
  cursor: auto;
  background-color: #FFFFFF;
}

.c22 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  border: 0;
  width: 100%;
  padding: 8px;
  margin: 0;
  line-height: inherit;
  box-sizing: border-box;
  height: 40px;
  background-color: #FFFFFF;
}

.c22::-webkit-input-placeholder {
  color: #6E6E69;
  line-height: inherit;
  opacity: 1;
}

.c22::-moz-placeholder {
  color: #6E6E69;
  line-height: inherit;
  opacity: 1;
}

.c22:-ms-input-placeholder {
  color: #6E6E69;
  line-height: inherit;
  opacity: 1;
}

.c22::placeholder {
  color: #6E6E69;
  line-height: inherit;
  opacity: 1;
}

.c22:disabled::-webkit-input-placeholder {
  color: #A0A09B;
}

.c22:disabled::-moz-placeholder {
  color: #A0A09B;
}

.c22:disabled:-ms-input-placeholder {
  color: #A0A09B;
}

.c22:disabled::placeholder {
  color: #A0A09B;
}

.c5 {
  position: relative;
  padding: 0px 0;
  border: solid;
  border-color: #BCBCB6;
  border-width: 1px;
  position: relative;
}

.c5:focus {
  border-width: 1px;
}

.c5:hover {
  border-color: #4B4B46;
}

.c5:focus {
  border-color: #0046FF;
}

.c0 {
  width: 200px;
  display: inline-block;
}

<div
  className="c0"
>
  <label
    className="c1"
    hidden={false}
  >
    <span
      className="c2"
    >
      <div
        className="c3"
      >
        Phone number 
      </div>
      <div
        className="c4 c5"
      >
        <div
          className="c6"
        >
          <select
            aria-hidden="true"
            className="c7"
            disabled={false}
            onChange={[Function]}
            value="46"
          >
            
            <option
              label={
                <CountryCodeLabel
                  countryCode="se"
                  prefixCode="+46"
                />
              }
              value="46"
            />
            <option
              label={
                <CountryCodeLabel
                  countryCode="dk"
                  prefixCode="+45"
                />
              }
              value="45"
            />
            <option
              label={
                <CountryCodeLabel
                  countryCode="no"
                  prefixCode="+47"
                />
              }
              value="47"
            />
            <option
              label={
                <CountryCodeLabel
                  countryCode="fi"
                  prefixCode="+385"
                />
              }
              value="385"
            />
            <option
              label={
                <ForwardRef
                  alignItems="center"
                  container={true}
                  gutter={3}
                >
                  <ForwardRef
                    item={true}
                  >
                    <Icon.Globe
                      size={3}
                    />
                  </ForwardRef>
                  <ForwardRef
                    item={true}
                  >
                    <ForwardRef
                      type="secondary"
                    >
                      +
                    </ForwardRef>
                  </ForwardRef>
                </ForwardRef>
              }
              value=""
            />
          </select>
          <div
            className="c8"
          >
            <div
              className="c3"
            >
              <div
                className="c0"
              >
                <label
                  className="c9"
                  hidden={true}
                  htmlFor="phone-input-country-code-selector"
                >
                  <span
                    className="c2"
                  >
                    country code 
                  </span>
                </label>
                <div
                  className="c10"
                  disabled={false}
                  label="country code"
                  onBlur={[Function]}
                  onFocus={[Function]}
                  tabIndex={0}
                >
                  <span
                    className="c11"
                  >
                    <button
                      aria-expanded="false"
                      aria-haspopup="listbox"
                      aria-label="country code: [object Object]"
                      className="c12 c13"
                      data-testid="input-select-button"
                      disabled={false}
                      form=""
                      id="phone-input-country-code-selector"
                      onClick={[Function]}
                      tabIndex={0}
                      type="button"
                    >
                      <div
                        aria-hidden="true"
                        className="c14 c15"
                      >
                        <div
                          className="c16"
                        >
                          <div
                            className="c17"
                          >
                            <svg
                              className="c18"
                              focusable="false"
                              role="img"
                              viewBox="0 0 640 480"
                            >
                              <g
                                transform="translate(50.082) scale(.9375)"
                              >
                                <g
                                  fillRule="evenodd"
                                  strokeWidth="1pt"
                                >
                                  <path
                                    d="M-121.103.302h256V205.1h-256zM-121.103 307.178h256v204.8h-256z"
                                    fill="#006aa7"
                                  />
                                  <path
                                    d="M-121.103 204.984h256v102.4h-256z"
                                    fill="#fecc00"
                                  />
                                  <path
                                    d="M133.843.01h102.4v511.997h-102.4z"
                                    fill="#fecc00"
                                  />
                                  <path
                                    d="M232.995 205.013h460.798v102.4H232.995z"
                                    fill="#fecc00"
                                  />
                                  <path
                                    d="M236.155 307.208h460.797v204.799H236.155zM236.155.302h460.797V205.1H236.155z"
                                    fill="#006aa7"
                                  />
                                </g>
                              </g>
                              <title>
                                Sweden
                              </title>
                            </svg>
                          </div>
                        </div>
                      </div>
                    </button>
                  </span>
                  <svg
                    aria-hidden="true"
                    className="c19 c20"
                    focusable="false"
                    open={false}
                    preserveAspectRatio="xMidYMid meet"
                    role="presentation"
                    viewBox="0 0 24 24"
                  >
                    <polygon
                      points="19.969 4 24 8.027 12 20 0 8.027 4.031 4 12 11.952"
                    />
                  </svg>
                </div>
                
              </div>
            </div>
          </div>
        </div>
        <div
          className="c3 c21"
        >
          <span
            className="c11"
          >
            +
            46
          </span>
        </div>
        <input
          className="NormalizedInput__Input-sc-1m4kmh9-0 c22"
          name="with-help-text-example"
          onChange={[Function]}
          placeholder="123 456 789"
          type="text"
          variant="normal"
        />
      </div>
    </span>
  </label>
  <div>
    <span
      className="c23"
    >
      Please fill in your phone number
    </span>
  </div>
</div>
`;
